--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,70 @@
 .App {
   text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  
   
 }
-
-
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+div{
+  color:white;
 }
-
 .App-link {
   color: #61dafb;
 }
 a{
   margin-right: 50px;
+  color:pink;
 }
 
 a:link { 
   text-decoration: none; 
+ 
 }
-
 
 body{
-  background-color: beige;
+  background-image:url('https://turnpaughhwc.com/wp-content/uploads/2022/09/Purple-Background-Hero-scaled.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  background-position: center;
+  height: 50%;
+
 }
 
-.card {
-  margin: 20px;
-  text-align: center;
+.cards * {
+  box-sizing: border-box;
+  color:black;
+
+}
+.hero{
+  
+
+}
+
+
+
+
+.projectPic{
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  display: block;
+  border-top: 2px solid #333333;
+  border-right: 2px solid #333333;
+  border-left: 2px solid #333333;
+
+}
+.row {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  float: left;
 }
 
-
+.row:last-child{
+  padding:5px;
+  margin-left: 10px;
+  margin-right: 10px;
+  justify-content: space-evenly;
+}
